Readded missing loads to filter templates

--- a/frontend/templates/includes/django-material-dashboard/filter-plugin.html
+++ b/frontend/templates/includes/django-material-dashboard/filter-plugin.html
@@ -1,3 +1,4 @@
+{% load static %}
   <div class="fixed-plugin">
     <a class="fixed-plugin-button text-dark position-fixed px-3 py-2">
       <i class="fa fa-filter"></i>
