--- a/frontend/templates/home/django-material-dashboard/model-filter-list.html
+++ b/frontend/templates/home/django-material-dashboard/model-filter-list.html
@@ -1,8 +1,9 @@
 {% extends "layouts/django-material-dashboard/base-filter.html" %}
-{% load custom_filter_list %}
-{% load html_tags %}
+{% load static i18n %}
 {% load humanize %}
 {% load django_tables2 %}
+{% load custom_filter_list %}
+
 {% block title %} {{ page_title|title }} {% endblock %}
 
 <!-- Specific Page CSS goes HERE  -->
