--- a/frontend/templates/home/django-material-dashboard/model-filter-list.html
+++ b/frontend/templates/home/django-material-dashboard/model-filter-list.html
@@ -35,3 +35,17 @@
 
   </div>
 {% endblock content %}
+
+  <!-- Specific Page JS goes HERE  -->
+{% block javascripts %}
+    <script src="{% static 'assets/js/django/vendor/jquery/jquery.js' %}"></script>
+    <script src="{% static 'assets/js/django/jquery.init.js' %}"></script>
+    <script src="{% static 'assets/js/django/core.js' %}"></script>
+    <script src="{% static 'assets/js/django/admin/RelatedObjectLookups.js' %}"></script>
+    <script src="{% static 'assets/js/django/actions.js' %}"></script>
+    <script src="{% static 'assets/js/django/urlify.js' %}"></script>
+    <script src="{% static 'assets/js/django/prepopulate.js' %}"></script>
+    <script src="{% static 'assets/js/django/vendor/xregexp/xregexp.js' %}"></script>
+    <script src="{% static 'assets/js/selectbox_all.js' %}"></script>
+    <script src="{% url 'jsi18n' %}"></script>
+{% endblock javascripts %}
