moved filter-plugin up and javascripts block to original position

--- a/frontend/templates/custom_admin/actions.html
+++ b/frontend/templates/custom_admin/actions.html
@@ -2,7 +2,7 @@
 
 {% block javascripts %}
 <script type="text/javascript">
-jQuery(document).ready(function($){
+$(document).ready(function($){
 
     $("input.action-select[type='checkbox']").change(function (e) {
         if ($(this).is(":checked")) { //If the checkbox is checked
