placed filter-plugin in original position and added jquery to custom_filter_list template

--- a/frontend/templates/custom_admin/actions.html
+++ b/frontend/templates/custom_admin/actions.html
@@ -1,6 +1,7 @@
 {% load i18n django_tables2 %}
 
 {% block javascripts %}
+<script src="{% static 'assets/js/plugins/jquery-3.4.1.min.js' %}"></script>
 <script type="text/javascript">
 $(document).ready(function($){
 
