--- a/frontend/templates/custom_admin/actions.html
+++ b/frontend/templates/custom_admin/actions.html
@@ -1,4 +1,4 @@
-{% load i18n django_tables2 %}
+{% load i18n django_tables2 static %}
 
 {% block javascripts %}
 <script src="{% static 'assets/js/plugins/jquery-3.4.1.min.js' %}"></script>
