Fixed style formatting in filter templates

--- a/frontend/templates/includes/django-material-dashboard/filter-plugin.html
+++ b/frontend/templates/includes/django-material-dashboard/filter-plugin.html
@@ -15,7 +15,7 @@
         </div>
         <!-- End Toggle Button -->
       </div>
-      <hr class="horizontal dark my-1">
+      <hr class="horizontal light my-1">
       <div class="card-body pt-sm-3 pt-0">
         <!-- START filter -->
         {% if filter %}
