--- a/frontend/templates/home/django-material-dashboard/model-filter-list.html
+++ b/frontend/templates/home/django-material-dashboard/model-filter-list.html
@@ -16,7 +16,7 @@
   <div class="container-fluid py-4">
     <div class="col-12">
       <div class="card my-4">
-        <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
+        <div class="card-header p-0 position-relative mx-3 z-index-2">
             <div class="card-body px-0 pb-2">
                 <!-- START export options -->
                 {% custom_filter_actions %}
