Added overflow-auto to filter-plugin template

--- a/frontend/templates/includes/django-material-dashboard/filter-plugin.html
+++ b/frontend/templates/includes/django-material-dashboard/filter-plugin.html
@@ -16,7 +16,7 @@
         <!-- End Toggle Button -->
       </div>
       <hr class="horizontal light my-1">
-      <div class="card-body pt-sm-3 pt-0">
+      <div class="card-body overflow-auto pt-sm-3 pt-0">
         <!-- START filter -->
         {% if filter %}
         <div id="changelist">
