Added table header for filter templates

--- a/frontend/templates/home/django-material-dashboard/model-filter-list.html
+++ b/frontend/templates/home/django-material-dashboard/model-filter-list.html
@@ -18,6 +18,8 @@
       <div class="card my-4">
         <div class="card-header p-0 position-relative mx-3 z-index-2">
             <div class="card-body px-0 pb-2">
+                <h6 class="text-dark text-capitalize ps-3">{{ page_title|title }} Table</h6>
+                <hr class="horizontal dark my-2">
                 <!-- START export options -->
                 {% custom_filter_actions %}
                 <!-- END export options -->
