added inset map into fieldsurvey and fieldsite dashboard views with custom templates

--- a/frontend/templates/home/django-material-dashboard/model-filter-list-fieldsurvey.html
+++ b/frontend/templates/home/django-material-dashboard/model-filter-list-fieldsurvey.html
@@ -28,7 +28,7 @@
                         Map Loading...
                       </button>
                     </div>
-                    <div id="map" data-url="{% url 'geom_fieldsite' %}"></div>
+                    <div id="map" data-url="{% url 'geom_fieldsurvey' %}"></div>
                     <div id="mapEmpty" class="d-flex justify-content-center lead"></div>
                   </div>
                 <!-- -------- END Grids -------- -->
