--- a/frontend/templates/home/django-material-dashboard/model-filter-list-fieldsite.html
+++ b/frontend/templates/home/django-material-dashboard/model-filter-list-fieldsite.html
@@ -12,26 +12,25 @@
 {% endblock stylesheets %}
 
 {% block content %}
-
+<!-- -------- START Grids -------- -->
+<div class="container">
+    <div id="mapLoading" class="d-flex justify-content-center">
+        <button class="btn btn-primary" type="button" disabled>
+            <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+            Map Loading...
+        </button>
+    </div>
+    <div id="map" data-url="{% url 'geom_fieldsite' %}"></div>
+    <div id="mapEmpty" class="d-flex justify-content-center lead"></div>
+</div>
+<!-- -------- END Grids -------- -->
   <div class="container-fluid py-4">
     <div class="col-12">
       <div class="card my-4">
-        <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
-            <div class="bg-gradient-light bg-white border-radius-lg pt-4 pb-3">
+        <div class="card-header p-0 position-relative mx-3 z-index-2">
+            <div class="card-body px-0 pb-2">
                 <h6 class="text-dark text-capitalize ps-3">{{ page_title|title }} Table</h6>
                 <hr class="horizontal dark my-2">
-                <!-- -------- START Grids -------- -->
-                <div id="mapLoading" class="d-flex justify-content-center">
-                    <button class="btn btn-primary" type="button" disabled>
-                        <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
-                        Map Loading...
-                    </button>
-                </div>
-                <div id="map" data-url="{% url 'geom_fieldsite' %}"></div>
-                <div id="mapEmpty" class="d-flex justify-content-center lead"></div>
-                <!-- -------- END Grids -------- -->
-            </div>
-            <div class="card-body px-0 pb-2">
                 <!-- START export options -->
                 {% custom_filter_actions %}
                 <!-- END export options -->
