--- a/frontend/templates/home/django-material-dashboard/model-filter-list-fieldsurvey.html
+++ b/frontend/templates/home/django-material-dashboard/model-filter-list-fieldsurvey.html
@@ -8,7 +8,13 @@
 
 <!-- Specific Page CSS goes HERE  -->
 {% block stylesheets %}
-<link rel="stylesheet" type="text/css" href="{% static 'assets/css/django/changelists.css' %}">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="{% static 'assets/css/map.css' %}">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
+          integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
+          crossorigin=""/>
+    <link rel="stylesheet" type="text/css" href="https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.Default.css">
+    <link rel="stylesheet" type="text/css" href="{% static 'assets/css/django/changelists.css' %}">
 {% endblock stylesheets %}
 
 {% block content %}
