--- a/frontend/templates/home/django-material-dashboard/model-filter-list-fieldsurvey.html
+++ b/frontend/templates/home/django-material-dashboard/model-filter-list-fieldsurvey.html
@@ -19,7 +19,7 @@
 
 {% block content %}
 <!-- -------- START Grids -------- -->
-<div class="container">
+<div class="container-fluid py-4">
     <div id="mapLoading" class="d-flex justify-content-center">
         <button class="btn btn-primary" type="button" disabled>
             <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
@@ -30,7 +30,7 @@
     <div id="mapEmpty" class="d-flex justify-content-center lead"></div>
 </div>
 <!-- -------- END Grids -------- -->
-  <div class="container-fluid py-4">
+  <div class="container-fluid">
     <div class="col-12">
       <div class="card my-4">
         <div class="card-header p-0 position-relative mx-3 z-index-2">
