--- a/frontend/templates/includes/django-material-kit/navigation-transparent.html
+++ b/frontend/templates/includes/django-material-kit/navigation-transparent.html
@@ -29,6 +29,9 @@
                   <a href="{% url 'about_us' %}" class="dropdown-item border-radius-md">
                     <span>About Us</span>
                   </a>
+                  <a href="{% url 'view_lc' %}" class="dropdown-item border-radius-md">
+                    <span>Local Contexts</span>
+                  </a>
                   <a href="{% url 'view_projects' %}" class="dropdown-item border-radius-md">
                     <span>Projects</span>
                   </a>
@@ -48,6 +51,9 @@
                   </h6>
                   <a href="{% url 'about_us' %}" class="dropdown-item border-radius-md">
                     <span>About Us</span>
+                  </a>
+                  <a href="{% url 'view_lc' %}" class="dropdown-item border-radius-md">
+                    <span>Local Contexts</span>
                   </a>
                   <a href="{% url 'view_projects' %}" class="dropdown-item border-radius-md">
                     <span>Projects</span>
