--- a/frontend/templates/includes/django-material-kit/navigation-light.html
+++ b/frontend/templates/includes/django-material-kit/navigation-light.html
@@ -28,6 +28,9 @@
                 <a href="{% url 'about_us' %}" class="dropdown-item border-radius-md">
                   <span>About Us</span>
                 </a>
+                <a href="{% url 'view_lc' %}" class="dropdown-item border-radius-md">
+                  <span>Local Contexts</span>
+                </a>
                 <a href="{% url 'view_projects' %}" class="dropdown-item border-radius-md">
                   <span>Projects</span>
                 </a>
@@ -47,6 +50,9 @@
                 </h6>
                 <a href="{% url 'about_us' %}" class="dropdown-item border-radius-md">
                   <span>About Us</span>
+                </a>
+                <a href="{% url 'view_lc' %}" class="dropdown-item border-radius-md">
+                  <span>Local Contexts</span>
                 </a>
                 <a href="{% url 'view_projects' %}" class="dropdown-item border-radius-md">
                   <span>Projects</span>
