updated url from view_lc to view_localcontexts in navigation templates for frontend module

--- a/frontend/templates/includes/django-material-kit/navigation-light.html
+++ b/frontend/templates/includes/django-material-kit/navigation-light.html
@@ -28,7 +28,7 @@
                 <a href="{% url 'about_us' %}" class="dropdown-item border-radius-md">
                   <span>About Us</span>
                 </a>
-                <a href="{% url 'view_lc' %}" class="dropdown-item border-radius-md">
+                <a href="{% url 'view_localcontexts' %}" class="dropdown-item border-radius-md">
                   <span>Local Contexts</span>
                 </a>
                 <a href="{% url 'view_projects' %}" class="dropdown-item border-radius-md">
@@ -51,7 +51,7 @@
                 <a href="{% url 'about_us' %}" class="dropdown-item border-radius-md">
                   <span>About Us</span>
                 </a>
-                <a href="{% url 'view_lc' %}" class="dropdown-item border-radius-md">
+                <a href="{% url 'view_localcontexts' %}" class="dropdown-item border-radius-md">
                   <span>Local Contexts</span>
                 </a>
                 <a href="{% url 'view_projects' %}" class="dropdown-item border-radius-md">
