--- a/frontend/templates/includes/django-material-kit/navigation.html
+++ b/frontend/templates/includes/django-material-kit/navigation.html
@@ -54,7 +54,7 @@
                       <a href="{% url 'about_us' %}" class="dropdown-item border-radius-md">
                         <span>About Us</span>
                       </a>
-                      <a href="{% url 'view_lc' %}" class="dropdown-item border-radius-md">
+                      <a href="{% url 'view_localcontexts' %}" class="dropdown-item border-radius-md">
                         <span>Local Contexts</span>
                       </a>
                       <a href="{% url 'view_projects' %}" class="dropdown-item border-radius-md">
