added padding around localcontexts logo in localcontexts template in frontend module

--- a/frontend/templates/home/django-material-kit/localcontexts.html
+++ b/frontend/templates/home/django-material-kit/localcontexts.html
@@ -45,7 +45,7 @@
                   </div>
                   <div class="col-md-4 col-12 my-auto">
                       <a target="_blank" href="https://localcontexts.org/">
-                          <img class="w-100 border-radius-lg shadow-lg" style="background-color:#16A085" src="https://localcontexts.org/wp-content/uploads/2020/11/local-contexts-logo.png" alt="local contexts logo">
+                          <img class="w-100 border-radius-lg shadow-lg p-2" style="background-color:#16A085" src="https://localcontexts.org/wp-content/uploads/2020/11/local-contexts-logo.png" alt="local contexts logo">
                       </a>
                   </div>
               <div class="row">
