Added missing reference to jquery in localcontexts.html

--- a/frontend/templates/home/django-material-kit/localcontexts.html
+++ b/frontend/templates/home/django-material-kit/localcontexts.html
@@ -120,5 +120,6 @@
 
 <!-- Specific Page JS goes HERE  -->
 {% block javascripts %}
+    <script src="{% static 'assets/js/plugins/jquery-3.4.1.min.js' %}"></script>
     <script src="{% static 'assets/js/local-contexts-api.js' %}"></script>
 {% endblock javascripts %}
