updated frontend localcontexts.html template

--- a/frontend/templates/home/django-material-kit/localcontexts.html
+++ b/frontend/templates/home/django-material-kit/localcontexts.html
@@ -51,6 +51,7 @@
               <div class="row">
                   <div class="col-md-8 col-12 my-auto">
                       <h3>University of Maine Land Acknowledgement</h3>
+                      <figure>
                       <p class="pe-md-5 mb-4">
                           The University of Maine recognizes that it is located on Marsh Island in the homeland of the
                           Penobscot Nation, where issues of water and territorial rights, and encroachment upon sacred
@@ -59,10 +60,12 @@
                           university also recognizes that the Penobscot Nation and the other Wabanaki Tribal Nations are
                           distinct, sovereign, legal and political entities with their own powers of self-governance and
                           self-determination. <br>
-                          <a href="https://umaine.edu/about/university-of-maine-land-acknowledgement/" class="text-info icon-move-right" target="_blank">UMaine Land Acknowledgement
+                      </p>
+                          <figcaption class="blockquote-footer ps-3"><cite title="UMaine Land Acknowledgement">UMaine Land Acknowledgement</cite></figcaption>
+                          <a target="_blank" href="https://umaine.edu/about/university-of-maine-land-acknowledgement/" class="text-info icon-move-right">UMaine Land Acknowledgement
                               <i class="fas fa-arrow-right text-sm ms-1"></i>
                           </a>
-                      </p>
+                      </figure>
                   </div>
                   <div class="col-md-4 col-12 my-auto">
                       <a target="_blank" href="https://umaine.edu/about/university-of-maine-land-acknowledgement/">
