updated frontend localcontexts.html template

--- a/frontend/templates/home/django-material-kit/localcontexts.html
+++ b/frontend/templates/home/django-material-kit/localcontexts.html
@@ -61,8 +61,8 @@
                           distinct, sovereign, legal and political entities with their own powers of self-governance and
                           self-determination. <br>
                       </p>
-                          <figcaption class="blockquote-footer ps-3"><cite title="UMaine Land Acknowledgement">UMaine Land Acknowledgement</cite></figcaption>
-                          <a target="_blank" href="https://umaine.edu/about/university-of-maine-land-acknowledgement/" class="text-info icon-move-right">UMaine Land Acknowledgement
+                          <figcaption class="blockquote-footer ps-3"><cite title="University of Maine Land Acknowledgement">University of Maine Land Acknowledgement</cite></figcaption>
+                          <a target="_blank" href="https://umaine.edu/about/university-of-maine-land-acknowledgement/" class="text-info icon-move-right">University of Maine Land Acknowledgement
                               <i class="fas fa-arrow-right text-sm ms-1"></i>
                           </a>
                       </figure>
