--- a/frontend/templates/home/django-material-kit/localcontexts.html
+++ b/frontend/templates/home/django-material-kit/localcontexts.html
@@ -80,7 +80,7 @@
                     {% if project.local_contexts_id %}
                     <h3>{{ project.project_label }}</h3>
                     <div class="row">
-                        <h5 id="lcProjectDetail" class="font-weight-bolder mt-3">Local Contexts</h5>
+                        <h5 id="lcProjectDetail" class="font-weight-bolder mt-3">Local Contexts Project Detail (Notices and Labels)</h5>
                         <span id="lcProjectId" hidden>{{ project.local_contexts_id }}</span>
                         <span id="lcResponse"></span>
                     </div>
