updated detail header in localcontexts.html

--- a/frontend/templates/home/django-material-kit/localcontexts.html
+++ b/frontend/templates/home/django-material-kit/localcontexts.html
@@ -80,20 +80,20 @@
                     {% if project.local_contexts_id %}
                     <h3>{{ project.project_label }}</h3>
                     <div class="row">
-                        <h5 id="lcProjectDetail" class="font-weight-bolder mt-3">Local Contexts Project Detail (Notices and Labels)</h5>
+                        <h5 id="lcProjectDetail" class="font-weight-bolder mt-3">Local Contexts' Project Detail (Notices and Labels)</h5>
                         <span id="lcProjectId" hidden>{{ project.local_contexts_id }}</span>
                         <span id="lcResponse"></span>
                     </div>
                     <a href="{% url 'detail_localcontexts' project.pk %}">
                         {% if project.project_goals %}
                         <div class="row">
-                        <h5 class="font-weight-bolder mt-3">Goals</h5>
+                        <h5 class="font-weight-bolder mt-3">{{ project.project_label }} Goals</h5>
                         <p class="pe-5">{{ project.project_goals }}</p>
                         </div>
                         {% endif %}
                         {% if project.project_description %}
                         <div class="row">
-                            <h5 class="font-weight-bolder mt-3">Description</h5>
+                            <h5 class="font-weight-bolder mt-3">{{ project.project_label }} Description</h5>
                             <p class="pe-5">{{ project.project_description }}</p>
                         </div>
                         {% endif %}
